# authentication-service-be

./: .dockerignore  .env.template  .gitignore  CHANGELOG.txt  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  README.md  README.rst  api-schemas.yaml  docker-compose.yml  manage.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: django.yml  python-publish.yml
account_service/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
account_service/migrations/: 0001_initial.py  0002_alter_accountuser_managers.py  0003_accountuser_uuid.py
account_service/services/emails/: users.py
account_service/services/generators/: uid.py
account_service/services/oauth2/: google.py  jwt.py
account_service/services/users/: records.py
account_service/templates/emails/: base.html  reset-password-email-template.html  verify-email-template.html
authentication_service/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  tokens.py  urls.py  utils.py  views.py
authentication_service/migrations/: 0001_initial.py  0002_alter_accountuser_uuid.py
authentication_service/services/emails/: users.py
authentication_service/services/generators/: uid.py
authentication_service/services/oauth2/: jwt.py
authentication_service/services/users/: records.py  timestamps.py
authentication_service/templates/emails/: base.html  reset-password-email-template.html  (+1 more)
authentication_service/tests/: test_views.py
core/: asgi.py  settings.py  urls.py  wsgi.py
core/config/: base.py  development.py  production.py
