[metadata]
name = django-authentication-service
version = 0.0.1
description = ðŸ” Handles storage of users and authentication of their identities.
long_description = file: README.md
url = https://github.com/israelabraham/authentication-service-be
license = CC0 1.0 Universal Public Domain Dedication
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
license_file = LICENSE.txt
description-file = README.md

[options]
include_package_data = true
python_requires = >=3.8
packages = find:
install_requires =
    django>=2.2
    djangorestframework
    djangorestframework-simplejwt
    rest-api-payload
    drf-yasg
    httpx

[pycodestyle]
ignore = E402,E722
max-line-length = 120
exclude = *migrations*, *tests*, *settings*